# cursos_alura

./: .gitignore  README.md  pyproject.toml
FrontEnd/JavaScript/JavaScript: Interfaces e Herança em Orientação a Objetos/: SistemaAutenticacao.js  index.js  package.json
FrontEnd/JavaScript/JavaScript: Programando a Orientação a Objetos/: ContaCorrente.js  index.js  nossa_primeira_classe.js  package.json
FrontEnd/JavaScript/JavaScript: primeiros passos com a linguagem/: oitavo_programa_emJS.js  primeiro_programa_em_JS.js  quarto_programa_em_JS.js  quinto_programa_em_JS.js  segundo_programa_em_JS.js  setimo_programa_em_JS.js  sexto_programa_em_JS.js  terceiro_programa_em_JS.js
FrontEnd/ReactJS/React: Entendendo como a biblioteca funciona/estudando-react/: package-lock.json  package.json
FrontEnd/ReactJS/React: Entendendo como a biblioteca funciona/estudando-react/src/: App.js
FrontEnd/ReactJS/React: Entendendo como a biblioteca funciona/estudando-react/src/components/: CardNotas.jsx  FormularioCadastro.jsx  ListaDeNotas.jsx
cursos_programação/python/Design Patterns Python/extraindo_url/: desafio.py  main.py
cursos_programação/python/Django/Introdução ao Django: Modelo, Rotas e Views/: manage.py
cursos_programação/python/Django/Introdução ao Django: Modelo, Rotas e Views/primeiro_passo/: asgi.py  settings.py  urls.py  wsgi.py
cursos_programação/python/extraindo_url/: extrator_url.py  main.py
cursos_programação/python/padroes_de_projetos/: calculador_de_descontos.py  calculador_impostos.py  descontos.py  impostos.py  orçamento.py
(+3 files in other folders)
