[tool.poetry]
name = "cursos_alura"
version = "0.1.0"
description = "Curso Alura"
authors = ["Igor Esposito <sposigor@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.8"

[tool.poetry.dev-dependencies]
pylint = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
